Fix button alignment issue

--- a/src/Components/Fruit/Fruit.css
+++ b/src/Components/Fruit/Fruit.css
@@ -1,3 +1,11 @@
 .fruit {
   height: 508px;
+  position: relative;
+}
+
+
+.addToListbtn {
+  position: absolute;
+  bottom: 0;
+  width: 80%;
 }
